samples/_failures_safe/1761716738_3f33b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40b168ba.c: In function ‘main’:
./samples/SAFE/__tmp_40b168ba.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
